force-app/main/default/objects/cel_email_task__mdt/cel_email_task__mdt.object-meta.xml
<CustomObject>
    <label>Email Task</label>
    <pluralLabel>Email Tasks</pluralLabel>
</CustomObject>