force-app/main/default/objects/cel_email_task__mdt/fields/cel_end_date__c.field-meta.xml
<CustomField>
    <fullName>cel_end_date__c</fullName>
    <label>End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>