force-app/main/default/objects/cel_email_task__mdt/fields/cel_marked_on_entry__c.field-meta.xml
<CustomField>
    <fullName>cel_marked_on_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked On Entry</label>
    <type>Checkbox</type>
</CustomField>