force-app/main/default/objects/cel_email_task__mdt/fields/cel_priority__c.field-meta.xml
<CustomField>
    <fullName>cel_priority__c</fullName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>