force-app/main/default/objects/cel_email_task__mdt/fields/cel_task__c.field-meta.xml
<CustomField>
    <fullName>cel_task__c</fullName>
    <label>Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>