force-app/main/default/objects/cel_email_task__mdt/fields/cel_template__c.field-meta.xml
<CustomField>
    <fullName>cel_template__c</fullName>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>