force-app/main/default/objects/cel_email_task__mdt/fields/cel_type__c.field-meta.xml
<CustomField>
    <fullName>cel_type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>